--- a/form.html
+++ b/form.html
@@ -332,5 +332,27 @@ function updateCellDisplay(dateStr) {
 
     generateCalendar();
   </script>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDToeM2cPECKb22wElwSkCDsOMiEv_QU10",
+      authDomain: "natura-shift.firebaseapp.com",
+      databaseURL: "https://natura-shift-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "natura-shift",
+      storageBucket: "natura-shift.firebasestorage.app",
+      messagingSenderId: "485985022346",
+      appId: "1:485985022346:web:29b59ab107cee81357d873"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
+
 </body>
 </html>
